@@ -1,5 +1,7 @@
 2002-09-14  Junichi Uekawa  <dancer@debian.org>
 
+	* parameter.c (parse_options): add notes on what is problematic about it.
+
 	* dsh.c (main): note the plan; when show_machine_names &2 == 1,
 	it should read input and duplicate the value to all other 
 	processes.
